# ConnectApp

./: .env.local  .gitignore  FORUM_DATA_INTEGRATION.md  LOCAL_DATA_SCRAPING.md  README.md  REAL_DATA_SETUP.md  SETUP_GUIDE.md  package-lock.json  package.json
agent/: DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  deploy.py  livekit.toml  livekit.yaml  livekit_agent.py  livekit_ai_agent.py  ngo_agent.py  pyproject.toml  requirements.txt  simple_agent.py  simple_ai_agent.py
prisma/: schema.prisma
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/chat/: route.ts
src/app/api/leaderboard/: route.ts
src/app/api/ngo-data/: route.ts
src/app/api/placeholder/: route.ts
src/app/api/posts/: route.ts
src/app/api/scrape-ngo/: route.ts
src/app/api/scrape-website/: route.ts
src/app/api/test/: route.ts
src/app/api/voice/: route.ts
src/components/: AIAssistant.tsx  CameraComponent.tsx  CauseShowcase.tsx  CuteSprout.tsx  GLBKorok.tsx  HeroSection.tsx  ImpactShowcase.tsx  ImpactXP.tsx  LandingPage.tsx  NGOActivities.tsx  NGODetailModal.tsx  NGOForum.tsx  NGOScraperDemo.tsx  NavigationBar.tsx  Rewards.tsx  Scene.tsx  SustainableRewards.tsx  UserPosts.tsx
src/config/: livekit.ts
src/hooks/: useLiveKitVoice.ts  useVoiceAssistant.ts
src/lib/: auth.ts
src/scripts/: seedDatabase.ts  syncForumData.ts  syncNGOData.ts
src/services/: forumDataService.ts  governmentDataService.ts  localDataScraper.ts  newsApiService.ts  ngoDataService.ts  ngoScraperService.ts  notificationService.ts  paymentService.ts  realNGODataService.ts  userService.ts
(+12 files in other folders)
